--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -614,6 +614,27 @@
 
                             }
 
+                            .cost {
+                                display: flex;
+                                flex-direction: row;
+                                align-items: center;
+                                gap: 15px;
+                                background-color: #e1f5fe;
+                                width: 85%;
+                                height: max-content;
+                                margin: 0px auto 0px auto;
+                                padding: 15px ;
+                                border-radius: 15px 15px 15px 0px;
+                                color: #757575;
+                                font-size: 28px;
+                                font-style: italic;
+
+                                img {
+                                    width: 20px;
+                                }
+
+                            }
+
                         }
 
                         .button-holder {
