Paystack payment method tab added

--- a/src/View/pages/payNow/paynow.scss
+++ b/src/View/pages/payNow/paynow.scss
@@ -762,6 +762,9 @@
                         }
 
                         .payment-platforms {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 20px;
 
                             .payment-item {
                                 padding: 20px;
