--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -116,6 +116,7 @@
                     align-items: center;
                     justify-content: center;
                     margin-bottom: 100px;
+                    position: relative;
 
                     .booking-item {
                         border: 1px solid #EEEEEE;
