--- a/src/View/components/modal/modal.scss
+++ b/src/View/components/modal/modal.scss
@@ -41,7 +41,8 @@
     transition: opacity .2s ease;
     height: 120%;
     z-index: 20;
-    margin: -90px 0px 0px 3px;
+    margin: -90px 0px 0px 0px;
+    
 
     .pappointments-item {
         display: flex;
@@ -50,15 +51,16 @@
         height: max-content;
         background-color: #c5c5c5;
         align-items: center;
-        padding: 20px 10px;
+        padding: 30px 10px;
         gap: 20px;
+        border-radius: 10px;
 
         .pappointments-item-header {
             display: flex;
             flex-direction: column;
             align-items: center;
             width: 350px;
-            height: 100px;
+            height: 80px;
             background-color: #fff;
             border-radius: 10px;
             padding: 10px;
@@ -66,6 +68,10 @@
             .tariff {
                 font-size: 35px;
                 font-weight: bold;
+
+                img {
+                    width: 25px;
+                }
             }
         }
         .pappointments-item-description {
@@ -77,6 +83,7 @@
             background-color: #fff;
             border-radius: 10px;
             padding: 10px;
+            // height: max-content;
 
             .pappointments-item-description-item {
                 display: flex;
@@ -84,7 +91,7 @@
                 justify-content: space-between;
                 width: 100%;
                 // border: 1px solid black;
-                height: 20px;
+                min-height: 20px;
 
                 .left {
                     display: flex;
@@ -117,4 +124,8 @@
             }
         }
     }
+}
+
+.pappointments-container.inactive {
+    display: none;
 }
