Others option added to gender and patient portal modal now shows

--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -22,7 +22,7 @@
         }
 
         .puprofile-modal-container {
-            display: none;
+            // display: none;
             // display: flex;
             justify-content: center;
             align-items: center;
