Loader added on the button of Patient Login Page

--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -200,6 +200,7 @@
                             color: #2196f3;
                             position: absolute;
                             margin: 105px auto 0px 235px;
+                            cursor: pointer;
                         }
 
                     }
@@ -634,6 +635,7 @@
                                 color: #2196f3;
                                 position: absolute;
                                 margin: 105px auto 0px 295px;
+                                cursor: pointer;
                             }
     
                         }
