--- a/src/View/components/loading/loading.scss
+++ b/src/View/components/loading/loading.scss
@@ -34,3 +34,14 @@
     }
 
 }
+
+
+.climbingBox-wrapper {
+    display: flex;
+    width: 100%;
+    height: 75vh;
+    align-items: center;
+    justify-content: center;
+    // border: 1px solid red;
+
+}
