--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -641,24 +641,29 @@
                             display: flex;
                             flex-direction: row;
                             justify-content: space-around;
+                            align-items: center;
+                            // border: 1px solid red;
 
                             .previous {
-                                padding: 15px 15px 15px 15px;
+                                padding: 20px 25px 20px 25px;
                                 background-color: #0C4CAC;
                                 color: white;
                                 border-radius: 2em;
-                                width: 60px;
+                                width: max-content;
                                 text-align: center;
+                                cursor: pointer;
 
                             }
 
                             .finish {
-                                padding: 15px 15px 15px 15px;
+                                padding: 20px 25px 20px 25px;
                                 background-color: #0C4CAC;
                                 color: white;
                                 border-radius: 2em;
-                                width: 60px;
+                                min-width: 60px;
+                                width: max-content;
                                 text-align: center;
+                                cursor: pointer;
                             }
                         }
 
