--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -336,22 +336,58 @@
         justify-content: center;
         gap: 30px;
 
-        .link {
-            text-decoration: none;
-            color: #0C4CAC;
-            // color: #c4dff5;
-            margin: 0px auto 0px auto;
+        .step1 {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 30px;
+            padding: 70px 0px 0px 0px;
+            // justify-content: center;
+            // border: 1px solid red;
+            width: 100%;
+            height: 90%;
+
+            .link {
+                text-decoration: none;
+                color: #0C4CAC;
+                // color: #c4dff5;
+                margin: 0px auto 0px auto;
+            }
+
+            .staffnavbar-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // border: 1px solid white;
+                margin: 0px auto 0px auto;
+                gap: 5px;
+            }
         }
 
-        .staffnavbar-item {
+        .step2 {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            // border: 1px solid white;
-            margin: 0px auto 0px auto;
-            gap: 5px;
+            // justify-content: center;
+            // border: 1px solid red;
+            width: 100%;
+            height: 10%;
+
+            .link {
+                text-decoration: none;
+                color: #0C4CAC;
+                // color: #c4dff5;
+                margin: 0px auto 0px auto;
+            }
+    
+            .staffnavbar-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // border: 1px solid white;
+                margin: 0px auto 0px auto;
+                gap: 5px;
+            }
         }
-        
     }
 }
 
@@ -378,20 +414,32 @@
         color: #0f5bce;
         align-items: center;
         // margin: 0px auto 0px auto;
-
-        .link {
-            text-decoration: none;
-            color: #0f5bce;
-            margin: 0px auto 0px auto;
-        }
-
-        .staffnavbarmobile-item {
+        
+        .step1 {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            // border: 1px solid white;
-            margin: 0px auto 0px auto;
-            gap: 5px;
+            flex-direction: row;
+            // border: 1px solid red;
+            gap: 30px;
+            padding: 10px 0px 10px 0px;
+            // width: 90%; //Uncomment this if you need to use Step 2
+            width: 100%;
+
+            .link {
+                text-decoration: none;
+                color: #0f5bce;
+                margin: 0px auto 0px auto;
+            }
+
+            .staffnavbarmobile-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // border: 1px solid white;
+                margin: 0px auto 0px auto;
+                gap: 5px;
+            }
+
         }
         
     }
