--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -294,6 +294,18 @@
                     //     }
                     // }
 
+                    .error_msg {
+                        // border: 1px solid red;
+                        margin: 0px 0px 10px 0px;
+                        padding: 5px;
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        background-color: red;
+                        color: white;
+                        font-size: 13px;
+                    }
+
                     form {
                         display: flex;
                         flex-direction: column;
