--- a/src/View/pages/payNow/paynow.scss
+++ b/src/View/pages/payNow/paynow.scss
@@ -299,6 +299,18 @@
                     //     }
                     // }
 
+                    .error_msg {
+                        // border: 1px solid red;
+                        margin: 0px 0px 10px 0px;
+                        padding: 5px;
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        background-color: red;
+                        color: white;
+                        font-size: 13px;
+                    }
+
                     form {
                         display: flex;
                         flex-direction: column;
@@ -416,6 +428,10 @@
                                 transform: translateY(150px);
                                 transition: 0.5s ease;
                                 position: absolute;
+                            }
+
+                            .required {
+                                border: 1px solid red;
                             }
 
                         }
