--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -425,6 +425,10 @@
                                 position: absolute;
                             }
 
+                            .required {
+                                border: 1px solid red;
+                            }
+
                         }
 
                         .button {
