Red Overlay line and Hero text adjusted

--- a/src/View/pages/auth/authotp.scss
+++ b/src/View/pages/auth/authotp.scss
@@ -43,6 +43,7 @@
 
         .auth-description {
             margin: 10px 0px 0px 0px;
+            font-size: 17px;
 
             span {
                 font-size: 20px;
