--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -155,8 +155,8 @@
         width: 99%;
         position: fixed;
         z-index: 2;
-        border: 2px solid red;
-        left: 1900px;
+        // border: 2px solid red;
+        left: 2900px;
     }
     .navbar-overlay.open{
         display: inline-block;
