--- a/src/View/components/buttons/buttons.scss
+++ b/src/View/components/buttons/buttons.scss
@@ -25,6 +25,33 @@
     }
 }
 
+.notificationBot-container {
+    z-index: 3;
+    position: fixed;
+    right: 60px;
+    bottom: 40px;
+    cursor: pointer;
+    /* margin-bottom: -50px; */
+
+    // .add-link {
+    //     text-decoration: none;
+
+        .notificationBot-wrapper {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            /* font-size: 70px; */
+            font-size: 45px;
+            // background-color: #0C4CAC;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: rgb(0 0 0 / 45%) 0px 6px 30px 0px;
+        }
+    // }
+}
+
 @media screen and (max-width: 480px) {
     .add-container {
         z-index: 1;
