--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -101,6 +101,42 @@
                 }
             }
 
+            .pportal-tabs {
+                // border: 1px solid black;
+                height: max-content;
+                margin: 0px 0px 0px 3px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                // padding: 3px;
+
+                .pportal-tabs-wrapper {
+                    width: 300px;
+                    height: 40px;
+                    // border: 1px solid red;
+                    // border-bottom: 1px solid #c5c5c5;
+                    display: flex;
+
+                    .pportal-tabs-item {
+                        width: 50%;
+                        // border: 1px solid red;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-bottom: 1px solid #e6e6e6;
+                        color: #c5c5c5;
+                        gap: 5px;
+                        cursor: pointer;
+                    }
+
+                    .pportal-tabs-item.active {
+                        border-bottom: 1px solid #2196f3;
+                        color: #2196f3;
+                    }
+
+                }
+            }
+
             .pportal-body-body {
                 display: flex;
                 flex-direction: row;
