--- a/src/View/pages/patient/patient.scss
+++ b/src/View/pages/patient/patient.scss
@@ -160,6 +160,20 @@
                             flex-direction: column;
                             background-color: white;
                             border-radius: 20px;
+
+                            .error_msg {
+                                // border: 1px solid red;
+                                margin: 20px auto 10px auto;
+                                padding: 10px 20px;
+                                border-radius: 10px;
+                                width: max-content;
+                                display: flex;
+                                align-items: center;
+                                gap: 10px;
+                                background-color: red;
+                                color: white;
+                                font-size: 13px;
+                            }
         
                             .header-section {
                                 display: flex;
@@ -236,6 +250,10 @@
                                         input:focus, textarea:focus, select:focus {
                                             outline: #2196f3;
                                             border: 1px solid #2196f3;
+                                        }
+
+                                        .required {
+                                            border: 1px solid red;
                                         }
                                     }
                                 }
@@ -334,9 +352,34 @@
                                             outline: #2196f3;
                                             border: 1px solid #2196f3;
                                         }
+                                        
+                                        .required {
+                                            border: 1px solid red;
+                                        }
                                     }
                                 }
                             }
+                        }
+                    }
+
+                    .patient-button-holder {
+                        display: flex;
+                        width: 100%;
+                        // border: 1px solid orange;
+                        align-items: center;
+                        margin: 30px 0px 40px 0px;
+        
+                        button {
+                            padding: 10px;
+                            width: 200px;
+                            margin: 0px auto 0px auto;
+                            cursor: pointer;
+                            border: none;
+                            background-color: #005EFF; //new color
+                            color: white;
+                            height: 60px;
+                            font-size: 15px;
+                            border-radius: 9px;
                         }
                     }
 
