Chat Engine Added: Whatsapp integration completed

--- a/src/View/components/buttons/buttons.scss
+++ b/src/View/components/buttons/buttons.scss
@@ -52,6 +52,10 @@
     // }
 }
 
+.chatusbutton-container {
+    border:  1px solid red;
+}
+
 @media screen and (max-width: 480px) {
     .add-container {
         z-index: 1;
