--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@ code {
     monospace;
 }
 
+
+.transition-3 {
+  transition: all 0.33s ease;
+  -webkit-transition: all 0.33s ease;
+  -moz-transition: all 0.33s ease;
+}
+
+.transition-5 {
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+}
+
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
